--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -5,5 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "cryptography>=45.0.4",
     "flet[all]>=0.28.3",
+    "pymysql>=1.1.1",
+    "python-dotenv>=1.1.0",
+    "sqlalchemy>=2.0.41",
 ]
