--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "cryptography>=45.0.4",
     "flet[all]>=0.28.3",
+    "pymupdf>=1.26.1",
     "pymysql>=1.1.1",
     "python-dotenv>=1.1.0",
     "sqlalchemy>=2.0.41",
